--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 // Libraries
 @import '~bootstrap/scss/bootstrap';
 @import '~font-awesome/scss/font-awesome';
+@import '~jointjs/dist/joint';
 
 // Global Styles
 @import './global';
