--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -27,11 +27,11 @@
   }
 }
 
-.createDiscussion {
+.project-description {
   width: 100%;
   text-align: center;
 
-  & > a {
+  & > span {
     margin: 1em;
   }
 }
