--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -36,6 +36,7 @@
   font-size: 16px;
   padding: 0.5em 3em;
   margin-bottom: 1em;
+  margin-top: 1.5em;
   border: 1px solid darken(#5cb85c, 10%);
   border-radius: 3em;
 }
