--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~font-awesome/scss/font-awesome';
 @import '~jointjs/dist/joint';
+@import '~react-notifications/lib/notifications';
 
 // Global Styles
 @import './global';
