--- a/src/index.scss
+++ b/src/index.scss
@@ -10,3 +10,4 @@
 // Components
 @import './components/sidebar/Sidebar';
 @import './components/dash/SolarNet';
+@import './components/others/Loader';
