--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -51,7 +51,7 @@
 }
 
 .toggle-sidebar-button-content {
-  position: absolute;
+  position: fixed;
   width: 30px;
   height: 100%;
   color: #23232c;
