--- a/src/components/dash/SolarNet.scss
+++ b/src/components/dash/SolarNet.scss
@@ -19,7 +19,15 @@
   margin-left: 1em;
   width: .5em;
   height: .5em;
-  background-color: darken(#d9534f, 10%);
   border-radius: 100%;
-  box-shadow: 0 0 .4em darken(#d9534f, 10%);
+
+  &.red {
+    background-color: darken(#d9534f, 10%);
+    box-shadow: 0 0 .4em darken(#d9534f, 10%);
+  }
+
+  &.green {
+    background-color: lighten(#357935, 10%);
+    box-shadow: 0 0 .4em lighten(#357935, 10%);
+  }
 }
