style and margin for button

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,4 @@
 @import './components/sidebar/Sidebar';
 @import './components/dash/SolarNet';
 @import './components/others/Loader';
+@import './components/analyze/AnalyzeTable';
