correct color and styling

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,3 +12,4 @@
 @import './components/dash/SolarNet';
 @import './components/others/Loader';
 @import './components/analyze/AnalyzeTable';
+@import './components/monitoring/MonitoringChart';
