--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -6,6 +6,7 @@
   height: 100%;
   width: 270px;
   transition: .3s margin ease-out;
+  will-change: transform;
   background: #23232c;
   border-radius: 0;
   padding: 0;
@@ -19,10 +20,12 @@
   & > i {
     cursor: pointer;
     transition: .3s color ease-out;
+    will-change: transform;
 
     &:hover {
       color: lighten(#fff, 20%);
       transition: .3s color ease-out;
+      will-change: transform;
     }
   }
 }
